# my_wasm

./: .gitignore  README.md
fib/: fib.c  fib.html  fib.wasm
linear_programming/: simplex_data.c  value  value.c
linear_programming/output/: value
monteCarloPi/: .gitignore  CMakeLists.txt  README.md  compile_commands.json  mcp.cpp
monteCarloPi/.cache/clangd/index/: mcp.cpp.218739DAF6C4C6C8.idx
